# Multi-Agent-Banking-AI-System

./: .gitignore  QUESTIONS.md  README.md  architecture.md  mainMasterAgent.py  pyproject.toml  requirements.txt
agents/accounts/: AccountMasterAgent.py  __init__.py
agents/cards/: __init__.py
agents/loansAndInsurance/: LoansInvestmentsMasterAgent.py
agents/payeesRecurringPayments/: PayeesRecurringPaymentsMasterAgent.py
agents/transactions/: TransactionMasterAgent.py
api/: README.md  api.py
cards/: CardsMasterAgent.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentInfo.jsx  AgentSelector.jsx  ChatInterface.jsx  MainChatInterface.jsx
frontend/src/services/: api.jsx
knowledge/: CORE_BANKING_DATA.json  TRANSACTIONS_DATA.json
miscellaneous/: MiscellaneousBankingMasterAgent.py
